<resources>
    <string name="app_name">Data Protection</string>
    <string name="choose_all_info_alert">choose all info!</string>
    <string name="main_header">DATA PROTECTION</string>
    <string name="choose_file_label">choose file</string>
    <string name="choose_method_label">choose method</string>
    <string name="choose_action_label">choose action</string>
    <string name="start_btn_text">demo</string>
    <string name="haffman">haffman</string>
    <string name="lzw">lzw</string>
    <string name="aes">aes</string>
    <string name="rsa">rsa</string>
    <string name="encrypt">encrypt</string>
    <string name="decrypt">decrypt</string>
    <string name="demo_file">DEMO FILE</string>
    <string name="file_not_chosen">file not chosen</string>
    <string name="exit">exit</string>
    <string name="info">info</string>
    <string name="key">key:</string>
    <string name="go">go</string>
    <string name="text">text:</string>
    <string name="manual">
        Мануал\n\n
        DEMO - Выбираем файл, программа кодирует данные, создает архив и сразу же декодирует в новый файл.\n
        ENCRYPT - Выбираем файл, программа кодирует данные и создает архив в директории файла.\n
        DECRYPT - Выбираем архив, программа декодирует данные и создает новый файл в директории архива.\n\n
        Выбираем метод из радиокнопок\n
        Для Хаффмана и LZW обязательно выбрать файл. Архив и раскодированный файл будут созданы в директории исходного\n\n

        Для AES ввсести ключ и кодируемый текст.\n
        Для RSA кодируемый текст.\n
    </string>
</resources>
