<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:text="@string/start_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp">

        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_file_label" />

        <Button
            android:id="@+id/btn_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_file" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_chosen_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="demo.txt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_method_label"
        app:layout_constraintBottom_toTopOf="@+id/rg_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_haffman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haffman" />

        <RadioButton
            android:id="@+id/rb_lzw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lzw" />


        <RadioButton
            android:id="@+id/rb_aes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aes" />

        <RadioButton
            android:id="@+id/rb_rsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsa" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>